css changes to fix horizontal scroll on proj page

--- a/css/fis_folio_style.css
+++ b/css/fis_folio_style.css
@@ -11,9 +11,10 @@ body {
     background-color: transparent;
     color: #ffffff; }
     .folio_intro_style .jumbotron .title_proj_style {
-      text-align: left;
+      /* text-align: left; */
       margin-top: 4rem;
-      padding-left: 2rem; }
+      /* padding-left: 2rem; } */
+      }
   .folio_intro_style .folio_project_intro {
     margin-bottom: 5rem;
     margin-top: 5rem;
@@ -26,7 +27,7 @@ body {
 
 .folio_section_highlight {
   margin-top: 3rem;
-  width: 100%; }
+  width: 100vw; }
   .folio_section_highlight img {
     display: inline-block;
     vertical-align: middle;
@@ -34,5 +35,5 @@ body {
     height: auto; }
   .folio_section_highlight .project-paws-piece-mb {
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     margin-bottom: 4rem !important; }
