--- a/scss/project.scss
+++ b/scss/project.scss
@@ -5,12 +5,19 @@ $florida-blue-bg: #ffffff ;
 $florida-blue-bg: #ffffff ;
 $florida-blue-bg: #ffffff ;
 
+html{
+  position: relative;
+  min-height: 100%;
+}
 
 body {
 
    font-size: 1rem;
    background-color: #ffffff;
-   min-height: 1200px;
+   min-height: 100%;
+   position: relative;
+  min-height: 100%;
+  margin-bottom: 160px;
 }
 
 /*--------------------------------
@@ -270,10 +277,6 @@ background-image: url(../img/fis_forum.jpg);
 }
 
 /*------------End of  row css------------*/
-.footer-width-style {
-
-    width: 100%;
-}
 
 .small-profile {
 
@@ -297,12 +300,36 @@ font-family: 'Josefin Slab', serif;
 
 }
 
-.footer-styles {
+.footer-container {
 
+  width: 100vw;
+
+  .footer-styles {
+
+    padding-top: 5rem;
+    padding-bottom: 2rem;
+    background-color: #FFFFFF !important;
+    border: 1px solid #d2d2d2;
+    font-size: 1.1rem;
+    width: 100vw;
+  }
+
+}
+
+.footer-container {
+  min-width: 100vw; }
+  .footer-container .footer-styles {
+    padding-top: 5rem;
+    // padding-bottom: 2rem;
+    background-color: #FFFFFF !important;
+    border: 1px solid #d2d2d2;
+    font-size: 1.1rem;
+   }
+
+.footer-styles {
   padding-top: 5rem;
-  padding-bottom: 2rem;
+  // padding-bottom: 2rem;
   background-color: #FFFFFF !important;
   border: 1px solid #d2d2d2;
   font-size: 1.1rem;
-  width: 100vw ;
-}
+   }
